# simple_svg

./: CMakeLists.txt  LICENSE  README.md  main_1.0.0.cpp  svg-test.html
example/: main.cpp  main_1.0.0.cpp  svg-test.html
include/: simple_svg.hpp
include/simple_svg/: simple_svg_1.0.0.hpp
